--- a/docs/docs-ref-autogen/excel/toc.yml
+++ b/docs/docs-ref-autogen/excel/toc.yml
@@ -177,6 +177,8 @@ items:
                 uid: 'excel!Excel.DataValidationOperator:enum'
               - name: DataValidationType
                 uid: 'excel!Excel.DataValidationType:enum'
+              - name: DateFilterCondition
+                uid: 'excel!Excel.DateFilterCondition:enum'
               - name: DeleteShiftDirection
                 uid: 'excel!Excel.DeleteShiftDirection:enum'
               - name: DocumentPropertyItem
@@ -213,6 +215,8 @@ items:
                 uid: 'excel!Excel.ImageFittingMode:enum'
               - name: InsertShiftDirection
                 uid: 'excel!Excel.InsertShiftDirection:enum'
+              - name: LabelFilterCondition
+                uid: 'excel!Excel.LabelFilterCondition:enum'
               - name: LinkedDataTypeState
                 uid: 'excel!Excel.LinkedDataTypeState:enum'
               - name: NamedItemScope
@@ -231,6 +235,8 @@ items:
                 uid: 'excel!Excel.PivotAxis:enum'
               - name: PivotFilterTopBottomCriterion
                 uid: 'excel!Excel.PivotFilterTopBottomCriterion:enum'
+              - name: PivotFilterType
+                uid: 'excel!Excel.PivotFilterType:enum'
               - name: PivotLayoutType
                 uid: 'excel!Excel.PivotLayoutType:enum'
               - name: Placement
@@ -313,6 +319,10 @@ items:
                 uid: 'excel!Excel.SpecialCellValueType:enum'
               - name: SubtotalLocationType
                 uid: 'excel!Excel.SubtotalLocationType:enum'
+              - name: TopBottomSelectionType
+                uid: 'excel!Excel.TopBottomSelectionType:enum'
+              - name: ValueFilterCondition
+                uid: 'excel!Excel.ValueFilterCondition:enum'
               - name: VerticalAlignment
                 uid: 'excel!Excel.VerticalAlignment:enum'
               - name: WorksheetPositionType
@@ -362,7 +372,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: Application
+          - name: 应用程序
             uid: 'excel!Excel.Application:class'
           - name: AutoFilter
             uid: 'excel!Excel.AutoFilter:class'
@@ -586,6 +596,8 @@ items:
             uid: 'excel!Excel.DataValidationRule:interface'
           - name: DateTimeDataValidation
             uid: 'excel!Excel.DateTimeDataValidation:interface'
+          - name: 格式
+            uid: 'excel!Excel.DatetimeFormatInfo:class'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
           - name: 筛选
@@ -642,10 +654,14 @@ items:
             uid: 'excel!Excel.PageLayoutMarginOptions:interface'
           - name: PageLayoutZoomOptions
             uid: 'excel!Excel.PageLayoutZoomOptions:interface'
+          - name: PivotDateFilter
+            uid: 'excel!Excel.PivotDateFilter:interface'
           - name: PivotField
             uid: 'excel!Excel.PivotField:class'
           - name: PivotFieldCollection
             uid: 'excel!Excel.PivotFieldCollection:class'
+          - name: PivotFilters
+            uid: 'excel!Excel.PivotFilters:interface'
           - name: PivotHierarchy
             uid: 'excel!Excel.PivotHierarchy:class'
           - name: PivotHierarchyCollection
@@ -654,16 +670,24 @@ items:
             uid: 'excel!Excel.PivotItem:class'
           - name: PivotItemCollection
             uid: 'excel!Excel.PivotItemCollection:class'
+          - name: PivotLabelFilter
+            uid: 'excel!Excel.PivotLabelFilter:interface'
           - name: PivotLayout
             uid: 'excel!Excel.PivotLayout:class'
+          - name: PivotManualFilter
+            uid: 'excel!Excel.PivotManualFilter:interface'
           - name: 数据透视表
             uid: 'excel!Excel.PivotTable:class'
           - name: PivotTableCollection
             uid: 'excel!Excel.PivotTableCollection:class'
+          - name: PivotTableScopedCollection
+            uid: 'excel!Excel.PivotTableScopedCollection:class'
           - name: PivotTableStyle
             uid: 'excel!Excel.PivotTableStyle:class'
           - name: PivotTableStyleCollection
             uid: 'excel!Excel.PivotTableStyleCollection:class'
+          - name: PivotValueFilter
+            uid: 'excel!Excel.PivotValueFilter:interface'
           - name: PresetCriteriaConditionalFormat
             uid: 'excel!Excel.PresetCriteriaConditionalFormat:class'
           - name: 范围
@@ -722,7 +746,7 @@ items:
             uid: 'excel!Excel.SettableColumnProperties:interface'
           - name: SettableRowProperties
             uid: 'excel!Excel.SettableRowProperties:interface'
-          - name: Setting
+          - name: 设置
             uid: 'excel!Excel.Setting:class'
           - name: SettingCollection
             uid: 'excel!Excel.SettingCollection:class'
@@ -861,7 +885,7 @@ items:
       - name: 通用 API
         uid: office!
         items:
-          - name: Office
+          - name: 办公室
             items:
               - name: 枚举
                 uid: ''
