--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfoloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfoloadoptions.yml
@@ -14,6 +14,7 @@ items:
     package: excel!
     children:
       - 'excel!Excel.Interfaces.CultureInfoLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.CultureInfoLoadOptions#datetimeFormat:member'
       - 'excel!Excel.Interfaces.CultureInfoLoadOptions#name:member'
       - 'excel!Excel.Interfaces.CultureInfoLoadOptions#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#$all:member'
@@ -29,6 +30,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#datetimeFormat:member'
+    summary: |-
+      定义适当的区域性格式，以显示日期和时间。 这取决于当前的系统区域性设置。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: datetimeFormat
+    fullName: datetimeFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'datetimeFormat?: Excel.Interfaces.DatetimeFormatInfoLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.DatetimeFormatInfoLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#name:member'
     summary: |-
       以 languagecode2/regioncode2 格式获取区域性名称（例如，"zh-tw-cn" or "en-us"）。 这取决于当前的系统设置。
@@ -62,5 +79,7 @@ items:
         type:
           - 'excel!Excel.Interfaces.NumberFormatInfoLoadOptions:interface'
 references:
+  - uid: 'excel!Excel.Interfaces.DatetimeFormatInfoLoadOptions:interface'
+    name: Excel.Interfaces.DatetimeFormatInfoLoadOptions
   - uid: 'excel!Excel.Interfaces.NumberFormatInfoLoadOptions:interface'
     name: Excel.Interfaces.NumberFormatInfoLoadOptions
