--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
@@ -9,6 +9,7 @@ items:
     type: interface
     package: excel!
     children:
+      - 'excel!Excel.Interfaces.PivotTableData#allowMultipleFiltersPerField:member'
       - 'excel!Excel.Interfaces.PivotTableData#columnHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#dataHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#enableDataValueEditing:member'
@@ -18,6 +19,22 @@ items:
       - 'excel!Excel.Interfaces.PivotTableData#name:member'
       - 'excel!Excel.Interfaces.PivotTableData#rowHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#useCustomSortLists:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableData#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableData#columnHierarchies:member'
     summary: |-
       数据透视表的列透视层级结构。
