--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableloadoptions.yml
@@ -13,6 +13,7 @@ items:
     package: excel!
     children:
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.PivotTableLoadOptions#allowMultipleFiltersPerField:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#enableDataValueEditing:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#id:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#layout:member'
@@ -28,6 +29,22 @@ items:
     type: property
     syntax:
       content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField?: boolean;'
       return:
         type:
           - boolean
