--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablescopedcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottablescopedcollectionloadoptions.yml
@@ -1,27 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions:interface'
     summary: |-
-      表示属于工作簿或工作表的所有 PivotTable 对象的集合。
+      表示数据透视表的限定集合。 数据透视表根据数据透视表左上角的位置进行排序。 它们按从上到下、从左到右的顺序排列。
 
-      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.PivotTableCollectionLoadOptions
-    fullName: Excel.Interfaces.PivotTableCollectionLoadOptions
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: Excel.Interfaces.PivotTableScopedCollectionLoadOptions
+    fullName: Excel.Interfaces.PivotTableScopedCollectionLoadOptions
     langs:
       - typeScript
     type: interface
     package: excel!
     children:
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#allowMultipleFiltersPerField:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#enableDataValueEditing:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#layout:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#useCustomSortLists:member'
-      - 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#allowMultipleFiltersPerField:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#enableDataValueEditing:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#id:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#layout:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#useCustomSortLists:member'
+      - 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#worksheet:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
+    isPreview: true
     name: $all
     fullName: $all
     langs:
@@ -32,7 +34,7 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#allowMultipleFiltersPerField:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#allowMultipleFiltersPerField:member'
     summary: |-
       对于集合中的每一项：指定数据透视表是否允许在表中给定的透视字段上应用多个 PivotFilters。
 
@@ -48,11 +50,12 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#enableDataValueEditing:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#enableDataValueEditing:member'
     summary: |-
       对于集合中的每一项：指定数据透视表是否允许用户对数据正文中的值进行编辑。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: enableDataValueEditing
     fullName: enableDataValueEditing
     langs:
@@ -63,11 +66,12 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#id:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#id:member'
     summary: |-
       对于集合中的每一项：数据透视表的 Id。 只读。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: id
     fullName: id
     langs:
@@ -78,11 +82,12 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#layout:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#layout:member'
     summary: |-
       对于集合中的每一项：描述数据透视表的布局和可视结构的 PivotLayout。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: layout
     fullName: layout
     langs:
@@ -93,11 +98,12 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#name:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#name:member'
     summary: |-
       对于集合中的每一项：数据透视表的名称。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: name
     fullName: name
     langs:
@@ -108,11 +114,12 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#useCustomSortLists:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#useCustomSortLists:member'
     summary: |-
       对于集合中的每一项：指定数据透视表在排序时是否使用自定义列表。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: useCustomSortLists
     fullName: useCustomSortLists
     langs:
@@ -123,11 +130,12 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.PivotTableCollectionLoadOptions#worksheet:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableScopedCollectionLoadOptions#worksheet:member'
     summary: |-
       对于集合中的每一项：包含当前数据透视表的工作表。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
     name: worksheet
     fullName: worksheet
     langs:
