--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableupdatedata.yml
@@ -9,9 +9,26 @@ items:
     type: interface
     package: excel!
     children:
+      - 'excel!Excel.Interfaces.PivotTableUpdateData#allowMultipleFiltersPerField:member'
       - 'excel!Excel.Interfaces.PivotTableUpdateData#enableDataValueEditing:member'
       - 'excel!Excel.Interfaces.PivotTableUpdateData#name:member'
       - 'excel!Excel.Interfaces.PivotTableUpdateData#useCustomSortLists:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableUpdateData#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableUpdateData#enableDataValueEditing:member'
     summary: |-
       指定数据透视表是否允许用户编辑数据体中的值。
