--- a/docs/docs-ref-autogen/excel/excel/excel.pivottable.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.pivottable.yml
@@ -14,6 +14,7 @@ items:
       - 'excel!OfficeExtension.ClientObject:class'
     package: excel!
     children:
+      - 'excel!Excel.PivotTable#allowMultipleFiltersPerField:member'
       - 'excel!Excel.PivotTable#columnHierarchies:member'
       - 'excel!Excel.PivotTable#context:member'
       - 'excel!Excel.PivotTable#dataHierarchies:member'
@@ -34,6 +35,22 @@ items:
       - 'excel!Excel.PivotTable#toJSON:member(1)'
       - 'excel!Excel.PivotTable#useCustomSortLists:member'
       - 'excel!Excel.PivotTable#worksheet:member'
+  - uid: 'excel!Excel.PivotTable#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.PivotTable#columnHierarchies:member'
     summary: |-
       数据透视表的列透视层级结构。
