--- a/docs/docs-ref-autogen/excel/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.range.yml
@@ -58,6 +58,7 @@ items:
       - 'excel!Excel.Range#getLastColumn:member(1)'
       - 'excel!Excel.Range#getLastRow:member(1)'
       - 'excel!Excel.Range#getOffsetRange:member(1)'
+      - 'excel!Excel.Range#getPivotTables:member(1)'
       - 'excel!Excel.Range#getResizedRange:member(1)'
       - 'excel!Excel.Range#getRow:member(1)'
       - 'excel!Excel.Range#getRowProperties:member(1)'
@@ -1407,6 +1408,28 @@ items:
           description: 区域偏移的列数（正数、负数或 0）。正数表示向右偏移，负数表示向左偏移。
           type:
             - number
+  - uid: 'excel!Excel.Range#getPivotTables:member(1)'
+    summary: |-
+      获取与区域重叠的数据透视表的限定集合。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: getPivotTables(fullyContained)
+    fullName: getPivotTables(fullyContained)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'getPivotTables(fullyContained?: boolean): Excel.PivotTableScopedCollection;'
+      return:
+        type:
+          - 'excel!Excel.PivotTableScopedCollection:class'
+        description: ''
+      parameters:
+        - id: fullyContained
+          description: 如果为 true，则仅返回完全包含在区域边界内的数据透视表。 默认值为 false。
+          type:
+            - boolean
   - uid: 'excel!Excel.Range#getResizedRange:member(1)'
     summary: |-
       获取与当前范围对象类似的范围对象，但其右下角可通过一定数量的行和列进行展开（或合拢）。
@@ -3387,6 +3410,8 @@ references:
         fullName: Excel.Range
       - name: ' | string'
         fullName: ' | string'
+  - uid: 'excel!Excel.PivotTableScopedCollection:class'
+    name: Excel.PivotTableScopedCollection
   - uid: 'excel!Excel.Range#getRowProperties~0:complex'
     name: 'OfficeExtension.ClientResult<RowProperties[]>'
     fullName: 'OfficeExtension.ClientResult<Excel.RowProperties[]>'
