--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottabledata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableData:interface'
-    summary: <span data-ttu-id="4c4e9-101">描述通过调用返回的数据的接口`pivotTable.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4c4e9-101">An interface describing the data returned by calling `pivotTable.toJSON()`</span></span><!-- --><span data-ttu-id="4c4e9-102">.</span><span class="sxs-lookup"><span data-stu-id="4c4e9-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`pivotTable.toJSON()`<!-- -->.
     name: Excel.Interfaces.PivotTableData
     fullName: Excel.Interfaces.PivotTableData
     langs:
@@ -9,6 +9,7 @@ items:
     type: interface
     package: excel!
     children:
+      - 'excel!Excel.Interfaces.PivotTableData#allowMultipleFiltersPerField:member'
       - 'excel!Excel.Interfaces.PivotTableData#columnHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#dataHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#enableDataValueEditing:member'
@@ -18,11 +19,27 @@ items:
       - 'excel!Excel.Interfaces.PivotTableData#name:member'
       - 'excel!Excel.Interfaces.PivotTableData#rowHierarchies:member'
       - 'excel!Excel.Interfaces.PivotTableData#useCustomSortLists:member'
+  - uid: 'excel!Excel.Interfaces.PivotTableData#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableData#columnHierarchies:member'
     summary: |-
-      <span data-ttu-id="4c4e9-103">数据透视表的列透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-103">The Column Pivot Hierarchies of the PivotTable.</span></span>
+      数据透视表的列透视层级结构。
 
-      <span data-ttu-id="4c4e9-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnHierarchies
     fullName: columnHierarchies
     langs:
@@ -35,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#columnHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#dataHierarchies:member'
     summary: |-
-      <span data-ttu-id="4c4e9-105">数据透视表的数据透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-105">The Data Pivot Hierarchies of the PivotTable.</span></span>
+      数据透视表的数据透视层级结构。
 
-      <span data-ttu-id="4c4e9-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataHierarchies
     fullName: dataHierarchies
     langs:
@@ -50,9 +67,9 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#dataHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#enableDataValueEditing:member'
     summary: |-
-      <span data-ttu-id="4c4e9-107">指定数据透视表是否允许用户编辑数据体中的值。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-107">Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
+      指定数据透视表是否允许用户编辑数据体中的值。
 
-      <span data-ttu-id="4c4e9-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
     fullName: enableDataValueEditing
     langs:
@@ -65,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableData#filterHierarchies:member'
     summary: |-
-      <span data-ttu-id="4c4e9-109">数据透视表的筛选器透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-109">The Filter Pivot Hierarchies of the PivotTable.</span></span>
+      数据透视表的筛选器透视层级结构。
 
-      <span data-ttu-id="4c4e9-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: filterHierarchies
     fullName: filterHierarchies
     langs:
@@ -80,9 +97,9 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#filterHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#hierarchies:member'
     summary: |-
-      <span data-ttu-id="4c4e9-111">数据透视表的透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-111">The Pivot Hierarchies of the PivotTable.</span></span>
+      数据透视表的透视层级结构。
 
-      <span data-ttu-id="4c4e9-112">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hierarchies
     fullName: hierarchies
     langs:
@@ -95,9 +112,9 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#hierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#id:member'
     summary: |-
-      <span data-ttu-id="4c4e9-113">数据透视表的 ID。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-113">Id of the PivotTable.</span></span> <span data-ttu-id="4c4e9-114">只读。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-114">Read-only.</span></span>
+      数据透视表的 ID。 只读。
 
-      <span data-ttu-id="4c4e9-115">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-115">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -110,9 +127,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotTableData#name:member'
     summary: |-
-      <span data-ttu-id="4c4e9-116">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-116">Name of the PivotTable.</span></span>
+      PivotTable 对象的名称。
 
-      <span data-ttu-id="4c4e9-117">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-117">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -125,9 +142,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.PivotTableData#rowHierarchies:member'
     summary: |-
-      <span data-ttu-id="4c4e9-118">数据透视表的行透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-118">The Row Pivot Hierarchies of the PivotTable.</span></span>
+      数据透视表的行透视层级结构。
 
-      <span data-ttu-id="4c4e9-119">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHierarchies
     fullName: rowHierarchies
     langs:
@@ -140,9 +157,9 @@ items:
           - 'excel!Excel.Interfaces.PivotTableData#rowHierarchies~0:complex'
   - uid: 'excel!Excel.Interfaces.PivotTableData#useCustomSortLists:member'
     summary: |-
-      <span data-ttu-id="4c4e9-120">指定排序时，数据透视表是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="4c4e9-120">Specifies whether the PivotTable uses custom lists when sorting.</span></span>
+      指定排序时，数据透视表是否使用自定义列表。
 
-      <span data-ttu-id="4c4e9-121">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4c4e9-121">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
     fullName: useCustomSortLists
     langs:
