--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivottableloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="6ec84-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="6ec84-101">Represents an Excel PivotTable.</span></span> <span data-ttu-id="6ec84-102">若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span><span class="sxs-lookup"><span data-stu-id="6ec84-102">To learn more about the PivotTable object model, read [Work with PivotTables using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span></span><!-- --><span data-ttu-id="6ec84-103">.</span><span class="sxs-lookup"><span data-stu-id="6ec84-103"></span></span>
+      表示 Excel 数据透视表。 若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)<!-- -->.
 
-      <span data-ttu-id="6ec84-104">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-104">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.PivotTableLoadOptions
     fullName: Excel.Interfaces.PivotTableLoadOptions
     langs:
@@ -13,6 +13,7 @@ items:
     package: excel!
     children:
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.PivotTableLoadOptions#allowMultipleFiltersPerField:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#enableDataValueEditing:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#id:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#layout:member'
@@ -20,7 +21,7 @@ items:
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#useCustomSortLists:member'
       - 'excel!Excel.Interfaces.PivotTableLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#$all:member'
-    summary: '<span data-ttu-id="6ec84-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="6ec84-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="6ec84-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="6ec84-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="6ec84-107">).</span><span class="sxs-lookup"><span data-stu-id="6ec84-107"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,11 +32,27 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#allowMultipleFiltersPerField:member'
+    summary: |-
+      指定数据透视表是否允许对表中给定的透视字段上的多个 PivotFilters 进行应用。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: allowMultipleFiltersPerField
+    fullName: allowMultipleFiltersPerField
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'allowMultipleFiltersPerField?: boolean;'
+      return:
+        type:
+          - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#enableDataValueEditing:member'
     summary: |-
-      <span data-ttu-id="6ec84-108">指定数据透视表是否允许用户编辑数据体中的值。</span><span class="sxs-lookup"><span data-stu-id="6ec84-108">Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
+      指定数据透视表是否允许用户编辑数据体中的值。
 
-      <span data-ttu-id="6ec84-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: enableDataValueEditing
     fullName: enableDataValueEditing
     langs:
@@ -48,9 +65,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="6ec84-110">数据透视表的 ID。</span><span class="sxs-lookup"><span data-stu-id="6ec84-110">Id of the PivotTable.</span></span> <span data-ttu-id="6ec84-111">只读。</span><span class="sxs-lookup"><span data-stu-id="6ec84-111">Read-only.</span></span>
+      数据透视表的 ID。 只读。
 
-      <span data-ttu-id="6ec84-112">\[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-112">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -63,9 +80,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#layout:member'
     summary: |-
-      <span data-ttu-id="6ec84-113">PivotLayout，用于说明数据透视表的布局和可视化结构。</span><span class="sxs-lookup"><span data-stu-id="6ec84-113">The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
+      PivotLayout，用于说明数据透视表的布局和可视化结构。
 
-      <span data-ttu-id="6ec84-114">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: layout
     fullName: layout
     langs:
@@ -78,9 +95,9 @@ items:
           - 'excel!Excel.Interfaces.PivotLayoutLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="6ec84-115">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="6ec84-115">Name of the PivotTable.</span></span>
+      PivotTable 对象的名称。
 
-      <span data-ttu-id="6ec84-116">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -93,9 +110,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#useCustomSortLists:member'
     summary: |-
-      <span data-ttu-id="6ec84-117">指定排序时，数据透视表是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="6ec84-117">Specifies whether the PivotTable uses custom lists when sorting.</span></span>
+      指定排序时，数据透视表是否使用自定义列表。
 
-      <span data-ttu-id="6ec84-118">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-118">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useCustomSortLists
     fullName: useCustomSortLists
     langs:
@@ -108,9 +125,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotTableLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="6ec84-119">包含当前 PivotTable 对象的工作表。</span><span class="sxs-lookup"><span data-stu-id="6ec84-119">The worksheet containing the current PivotTable.</span></span>
+      包含当前 PivotTable 对象的工作表。
 
-      <span data-ttu-id="6ec84-120">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ec84-120">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
